--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Implement_BLL\BLL_DangKy.cs" />
     <Compile Include="Implement_BLL\BLL_DangNhap.cs" />
+    <Compile Include="Implement_BLL\BLL_DatPhong.cs" />
     <Compile Include="Implement_BLL\BLL_DoiMatKhau.cs" />
     <Compile Include="Implement_BLL\BLL_InfoAccount.cs" />
     <Compile Include="Implement_BLL\BLL_ManagementKaraoke.cs" />
@@ -57,6 +58,7 @@
     <Compile Include="Implement_BLL\BLL_QuenMatKhau.cs" />
     <Compile Include="Implement_BLL\BLL_TimKiem.cs" />
     <Compile Include="Implement_BLL\ImplementBLL.cs" />
+    <Compile Include="Interface_BLL\I_BLL_DatPhong.cs" />
     <Compile Include="Interface_BLL\I_BLL_Karaoke.cs" />
     <Compile Include="Interface_BLL\I_BLL_QuanLyKhachHang.cs" />
     <Compile Include="Interface_BLL\I_BLL_QuanLyNhanVien.cs" />
