--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Implement_BLL\BLL_MenuNhanVien.cs" />
     <Compile Include="Implement_BLL\BLL_MenuQuanLy.cs" />
     <Compile Include="Implement_BLL\BLL_NguoiDung.cs" />
+    <Compile Include="Implement_BLL\BLL_Order.cs" />
     <Compile Include="Implement_BLL\BLL_QuanLyDoanhThu.cs" />
     <Compile Include="Implement_BLL\BLL_QuanLyKhachHang.cs" />
     <Compile Include="Implement_BLL\BLL_QuanLyNhanVien.cs" />
@@ -60,6 +61,7 @@
     <Compile Include="Implement_BLL\ImplementBLL.cs" />
     <Compile Include="Interface_BLL\I_BLL_DatPhong.cs" />
     <Compile Include="Interface_BLL\I_BLL_Karaoke.cs" />
+    <Compile Include="Interface_BLL\I_BLL_Order.cs" />
     <Compile Include="Interface_BLL\I_BLL_QuanLyKhachHang.cs" />
     <Compile Include="Interface_BLL\I_BLL_QuanLyNhanVien.cs" />
     <Compile Include="Interface_BLL\I_BLL_QuanLyPhongHat.cs" />
@@ -73,7 +75,7 @@
       <Name>DAL</Name>
     </ProjectReference>
     <ProjectReference Include="..\DTO\DTO.csproj">
-      <Project>{46887fbd-32da-449d-8d1a-84bdc862f2a7}</Project>
+      <Project>{09fa4d03-a431-4c82-a480-18195a07b134}</Project>
       <Name>DTO</Name>
     </ProjectReference>
   </ItemGroup>
