--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Implement_DAL\DAL_QuanLyPhongHat.cs" />
     <Compile Include="Implement_DAL\DAL_QuanLyQuanHat.cs" />
     <Compile Include="Implement_DAL\DAL_QuenMatKhau.cs" />
+    <Compile Include="Implement_DAL\DAL_ThanhToan.cs" />
     <Compile Include="Implement_DAL\DAL_TimKiem.cs" />
     <Compile Include="Implement_DAL\ImplementDAL.cs" />
     <Compile Include="Interface_DAL\I_DAL_DatPhong.cs" />
@@ -75,6 +76,7 @@
     <Compile Include="Interface_DAL\I_DAL_Order.cs" />
     <Compile Include="Interface_DAL\I_DAL_PhongHat.cs" />
     <Compile Include="Interface_DAL\I_DAL_QuanLyQuanHat.cs" />
+    <Compile Include="Interface_DAL\I_DAL_ThanhToan.cs" />
     <Compile Include="Interface_DAL\I_DAL_TimKiem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
