--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Implement_BLL\BLL_NguoiDung.cs" />
     <Compile Include="Implement_BLL\BLL_Order.cs" />
     <Compile Include="Implement_BLL\BLL_QuanLyDoanhThu.cs" />
+    <Compile Include="Implement_BLL\BLL_QuanLyHoaDon.cs" />
     <Compile Include="Implement_BLL\BLL_QuanLyKhachHang.cs" />
     <Compile Include="Implement_BLL\BLL_QuanLyNhanVien.cs" />
     <Compile Include="Implement_BLL\BLL_QuanLyPhongHat.cs" />
@@ -63,6 +64,7 @@
     <Compile Include="Interface_BLL\I_BLL_DatPhong.cs" />
     <Compile Include="Interface_BLL\I_BLL_Karaoke.cs" />
     <Compile Include="Interface_BLL\I_BLL_Order.cs" />
+    <Compile Include="Interface_BLL\I_BLL_QuanLyHoaDon.cs" />
     <Compile Include="Interface_BLL\I_BLL_QuanLyKhachHang.cs" />
     <Compile Include="Interface_BLL\I_BLL_QuanLyNhanVien.cs" />
     <Compile Include="Interface_BLL\I_BLL_QuanLyPhongHat.cs" />
