--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Interface_DAL\I_DAL_NhanVien.cs" />
     <Compile Include="Interface_DAL\I_DAL_Order.cs" />
     <Compile Include="Interface_DAL\I_DAL_PhongHat.cs" />
+    <Compile Include="Interface_DAL\I_DAL_QuanLyDoanhThu.cs" />
     <Compile Include="Interface_DAL\I_DAL_QuanLyHoaDon.cs" />
     <Compile Include="Interface_DAL\I_DAL_QuanLyQuanHat.cs" />
     <Compile Include="Interface_DAL\I_DAL_ThanhToan.cs" />
