--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Interface_BLL\I_BLL_DatPhong.cs" />
     <Compile Include="Interface_BLL\I_BLL_Karaoke.cs" />
     <Compile Include="Interface_BLL\I_BLL_Order.cs" />
+    <Compile Include="Interface_BLL\I_BLL_QuanLyDoanhThu.cs" />
     <Compile Include="Interface_BLL\I_BLL_QuanLyHoaDon.cs" />
     <Compile Include="Interface_BLL\I_BLL_QuanLyKhachHang.cs" />
     <Compile Include="Interface_BLL\I_BLL_QuanLyNhanVien.cs" />
