--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Implement_BLL\BLL_QuenMatKhau.cs" />
     <Compile Include="Implement_BLL\BLL_ThanhToan.cs" />
     <Compile Include="Implement_BLL\BLL_TimKiem.cs" />
+    <Compile Include="Implement_BLL\BLL_XuatHoaDon.cs" />
     <Compile Include="Implement_BLL\ImplementBLL.cs" />
     <Compile Include="Interface_BLL\I_BLL_DatPhong.cs" />
     <Compile Include="Interface_BLL\I_BLL_Karaoke.cs" />
@@ -69,6 +70,7 @@
     <Compile Include="Interface_BLL\I_BLL_QuanLyQuanHat.cs" />
     <Compile Include="Interface_BLL\I_BLL_ThanhToan.cs" />
     <Compile Include="Interface_BLL\I_BLL_TimKiem.cs" />
+    <Compile Include="Interface_BLL\I_BLL_XuatHoaDon.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
