--- a/GUI_ManagementKaraoke/GUI_ManagementKaraoke.csproj
+++ b/GUI_ManagementKaraoke/GUI_ManagementKaraoke.csproj
@@ -125,6 +125,12 @@
     <Compile Include="ManagementKaraoke\ThongTinTaiKhoan.Designer.cs">
       <DependentUpon>ThongTinTaiKhoan.cs</DependentUpon>
     </Compile>
+    <Compile Include="ManagementKaraoke\XuatHoaDon.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ManagementKaraoke\XuatHoaDon.Designer.cs">
+      <DependentUpon>XuatHoaDon.cs</DependentUpon>
+    </Compile>
     <Compile Include="Management_Karaoke.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -253,6 +259,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ManagementKaraoke\ThongTinTaiKhoan.resx">
       <DependentUpon>ThongTinTaiKhoan.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ManagementKaraoke\XuatHoaDon.resx">
+      <DependentUpon>XuatHoaDon.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Management_Karaoke.resx">
       <DependentUpon>Management_Karaoke.cs</DependentUpon>
