--- a/GUI_ManagementKaraoke/packages.config
+++ b/GUI_ManagementKaraoke/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Guna.Charts.WinForms" version="1.0.9" targetFramework="net48" />
   <package id="Guna.UI2.WinForms" version="2.0.4.6" targetFramework="net48" />
+  <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1004" targetFramework="net48" />
 </packages>
