--- a/GUI_ManagementKaraoke/GUI_ManagementKaraoke.csproj
+++ b/GUI_ManagementKaraoke/GUI_ManagementKaraoke.csproj
@@ -39,6 +39,10 @@
     <Reference Include="Guna.UI2, Version=2.0.4.6, Culture=neutral, PublicKeyToken=8b9d14aa5142e261, processorArchitecture=MSIL">
       <HintPath>..\packages\Guna.UI2.WinForms.2.0.4.6\lib\net48\Guna.UI2.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Office.Interop.Word, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Office.Interop.Word.15.0.4797.1004\lib\net20\Microsoft.Office.Interop.Word.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
@@ -56,8 +60,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Event\Event_LayDSHoaDon.cs" />
     <Compile Include="Event\Event_LayDSKhachHang.cs" />
     <Compile Include="Event\Event_LayDSNhanVien.cs" />
+    <Compile Include="Event\Event_LayDSPhongDat.cs" />
     <Compile Include="Event\Event_LayDSPhongHat.cs" />
     <Compile Include="ManagementKaraoke\DatPhong.cs">
       <SubType>Form</SubType>
